# customkbd

./: .gitignore  CMakeLists.txt  README.md  testing.txt
.github/workflows/: ci.yml
cmake/: Tooling.cmake
configs/: device.example.json  device.json  mappings.json
include/customkbd/: version.hpp
src/: CMakeLists.txt
src/cli/: main.cpp
src/customkbd/: Config.cpp  Config.hpp  DeviceMatcher.cpp  DeviceMatcher.hpp  InputDaemon.cpp  InputDaemon.hpp  InputDeviceInfo.cpp  InputDeviceInfo.hpp  Keymap.cpp  Keymap.hpp  Logger.cpp  Logger.hpp  UInput.cpp  UInput.hpp  Util.hpp
src/daemon/: main.cpp
systemd/: customkbd.service
